--- a/modules/programs/sway/.config/sway/config
+++ b/modules/programs/sway/.config/sway/config
@@ -34,15 +34,7 @@ smart_borders on
 ## Output configuration
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-output eDP-1 {
-    mode 1920x1080
-    pos 0 0
-}
-
-output "Dell Inc. DELL P2419HC 6LZCJQ2" {
-    mode 1920x1080
-    pos 1920 0
-}
+# REVIEW: using kanshi
 
 ## Autostart
 
@@ -55,7 +47,7 @@ exec {
       timeout 600 'swaymsg "output * dpms off"' \
       resume 'swaymsg "output * dpms on"' \
       before-sleep 'swaylock -f'
-    # kanshi
+    kanshi
     mako
     waybar -c ~/.config/waybar/config \
       -s ~/.config/waybar/style.css
